<?xml version="1.0"?>
<package format="2">
  <name>wc_perception</name>
  <version>0.0.1</version>
  <description>The wheelchair perception package to make predictions on steering.</description>

  <maintainer email="jenny@bluehorizon.ai">jenny</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
    
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>wc_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  

  <export>

  </export>
</package>
